--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,14 @@
             <artifactId>threetenbp</artifactId>
             <version>1.5.1</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.5.3</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
